--- a/12.md
+++ b/12.md
@@ -1,3 +1,12 @@
+
+
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	},
+
+
 import PropTypes from 'prop-types';
 import { Nav } from './Navigation.style';
 import React from 'react';
