--- a/12.md
+++ b/12.md
@@ -1,5 +1,12 @@
 
-
+ "scripts": {
+    "test": "jest",
+    "babel": "babel src -d lib --ignore \"**/*.test.js\" -s --delete-dir-on-start",
+    "babel:module": "yarn babel -d module --modules false",
+    "copy:types": "cp src/index.d.ts lib/",
+    "prepare": "node scripts/build-index.js && concurrently \"yarn run babel\" \"yarn run babel:module\" && yarn copy:types",
+    "commit": "git-cz"
+  },
 	"config": {
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
