--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -69,3 +69,11 @@ pii: personal identificable information
 
 ### macie
 use ai to analyse pii
+
+
+### note
+- largest file can be 5Gb\
+- larger than 100mb, multi part upload
+- read after write consistency for put new objects
+- eventual consistency overwrite on puts and deletes
+- an s3 in region specific
