--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -77,3 +77,8 @@ use ai to analyse pii
 - read after write consistency for put new objects
 - eventual consistency overwrite on puts and deletes
 - an s3 in region specific
+
+
+### byte-range
+
+### cloud front
