--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -82,3 +82,6 @@ use ai to analyse pii
 ### byte-range
 
 ### cloud front
+- apex dns name on cloud front
+- support wild card of cname
+- regional cache location < edge locaitons
