--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -77,6 +77,7 @@ use ai to analyse pii
 - read after write consistency for put new objects
 - eventual consistency overwrite on puts and deletes
 - an s3 in region specific
+- standards-based REST web interfaces 
 
 
 ### byte-range
@@ -85,3 +86,8 @@ use ai to analyse pii
 - apex dns name on cloud front
 - support wild card of cname
 - regional cache location < edge locaitons
+
+
+- resrcit access to content using signed cookies or signed url
+- restrict access to ojbects in s3
+- OAI - they can not access content, but connect tho via cloutfront
