--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -88,3 +88,6 @@ use ai to analyse pii
 - resrcit access to content using signed cookies or signed url
 - restrict access to ojbects in s3
 - OAI - they can not access content, but connect tho via cloutfront
+
+### notes
+- Amazon S3 is a distributed architecture and objects are redundantly stored on multiple devices across multiple facilities (AZs) in an Amazon S3 region.
