--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -91,3 +91,16 @@ use ai to analyse pii
 
 ### notes
 - Amazon S3 is a distributed architecture and objects are redundantly stored on multiple devices across multiple facilities (AZs) in an Amazon S3 region.
+- Files can be from 0 bytes to 5TB.
+- The largest object that can be uploaded in a single PUT is 5 gigabytes.
+- An S3 bucket is region specific. !!!!
+
+• Access Control Lists (ACLs) – control permissions access to the bucket.
+• Bucket Policies – control access to the bucket.
+• Cross Origin Resource Sharing (CORS).
+
+Analytic 
+- data lake concept: athena, quicksight, redshift spectrum
+- IOT STREAMING DATA: knises firehole
+- machine learning, ai - rekonition, lex, mxnet
+- storage class Analytic: s3 management analytic
