--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -104,3 +104,7 @@ Analytic
 - IOT STREAMING DATA: knises firehole
 - machine learning, ai - rekonition, lex, mxnet
 - storage class Analytic: s3 management analytic
+
+
+### efs
+- The VPC of the connecting instance must have DNS hostnames enabled.
