--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -108,3 +108,9 @@ Analytic
 
 ### efs
 - The VPC of the connecting instance must have DNS hostnames enabled.
+
+
+### share s3 bucket accross accounts
+- bucket policy and IAM role - programmtic only - accross entire bucket
+- bucket acls and IAM role - programmtic only - files
+- cross account IAM role - console and programmtic 
