--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -111,6 +111,6 @@ Analytic
 
 
 ### share s3 bucket accross accounts
-- bucket policy and IAM role - programmtic only - accross entire bucket
-- bucket acls and IAM role - programmtic only - files
+- bucket policies and IAM role - programmtic only - accross entire bucket
+- bucket ACLs and IAM role - programmtic only - files
 - cross account IAM role - console and programmtic 
