--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -41,6 +41,8 @@ bucket share:
 - bucket ACL and IAM
 - cross-account IAM
 
+### performance 
+
 ### replication
 - versioning enable
 - delete/ delete marker not replicated 
