--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -36,7 +36,7 @@ life cycle: transition -> expire (current and previous version)
 
 scp: service control policies
 
-bucket share:
+### bucket share:
 - use bucket policy and IAM
 - bucket ACL and IAM
 - cross-account IAM
@@ -44,7 +44,13 @@ bucket share:
 ### performance 
 - byte range fetch
 - prefix
+- multi upload
 
+### signed url vs cookies - attach a policy - url epxiraton, etc
+- one url - one file
+- cookie - multi files
+- ec2 -> cloudfront
+- s3 -> s3 signed url
 ### replication
 - versioning enable
 - delete/ delete marker not replicated 
