--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -7,9 +7,9 @@ An S3 bucket is region specific.
 
 aCLs – define permissions to access the object.
 
-read after write consistency for new object
-eventual consistency OVERWRITE put and delete files
-11 9s
+- read after write consistency for new object
+- eventual consistency OVERWRITE put and delete files
+- 11 9s
 
 classes:
 s3 standard: million seconds
