--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -12,14 +12,14 @@ aCLs – define permissions to access the object.
 - 11 9s
 
 classes:
-s3 standard: million seconds
-s3 ia: infrequent accessed: charge to retrieve: million seconds
-s3 one zone ia: million seconds
-s3 intelligent tiering: machine learnng: million seconds
-glacier: configure retrive time minute - hours: 1 min - 12 hours
-glacier deep: retrive 12 hours 
+- s3 standard: million seconds
+- s3 ia: infrequent accessed: charge to retrieve: million seconds
+- s3 one zone ia: million seconds
+- s3 intelligent tiering: machine learnng: million seconds
+- glacier: configure retrive time minute - hours: 1 min - 12 hours
+- glacier deep: retrive 12 hours 
 
-file size: 0-5TB
+- file size: 0-5TB
 
 bucket: acl ( access control lists )/ bucket policy
 
@@ -51,6 +51,7 @@ scp: service control policies
 - cookie - multi files
 - ec2 -> cloudfront
 - s3 -> s3 signed url
+
 ### replication
 - versioning enable
 - delete/ delete marker not replicated 
@@ -81,7 +82,7 @@ use ai to analyse pii
 ### note
 - largest file can be 5Gb\
 - larger than 100mb, multi part upload
-- read after write consistency for put new objects
+- read after write consistency for put NEW objects
 - eventual consistency overwrite on puts and deletes
 - an s3 in region specific
 - standards-based REST web interfaces 
@@ -94,9 +95,8 @@ use ai to analyse pii
 - support wild card of cname
 - regional cache location < edge locaitons
 
-
 - resrcit access to content using signed cookies or signed url
-- restrict access to ojbects in s3
+- restrict access to objects in s3
 - OAI - they can not access content, but connect tho via cloutfront
 
 ### notes
