--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -130,6 +130,9 @@ Analytic
 - To share an object, you can either make it public or generate a pre-signed URL. Expiration date and time must be configured.
 - These can be generated using SDKs for Java and .Net and AWS explorer for Visual Studio. Can be used for downloading and uploading S3 objects.
 
+### You can setup access control to your buckets using:
+• Bucket policies.
+• Access Control Lists.
 
 ### test
 - Expedited —Expedited retrievals allow you to quickly access your data when occasional urgent requests for a subset of archives are required. For all but the largest archives (250 MB+), data accessed using Expedited retrievals are typically made available within 1–5 minutes. Provisioned Capacity ensures that retrieval capacity for Expedited retrievals is available when you need it.
