--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -134,6 +134,8 @@ Analytic
 • Bucket policies.
 • Access Control Lists.
 
+- By using an OAI you can restrict users so they cannot access the content directly using the S3 URL, they must connect via CloudFront.
+
 ### test
 - Expedited —Expedited retrievals allow you to quickly access your data when occasional urgent requests for a subset of archives are required. For all but the largest archives (250 MB+), data accessed using Expedited retrievals are typically made available within 1–5 minutes. Provisioned Capacity ensures that retrieval capacity for Expedited retrievals is available when you need it.
 - Standard —Standard retrievals allow you to access any of your archives within several hours. Standard retrievals typically complete within 3–5 hours. This is the default option for retrieval requests that do not specify the retrieval option.
