--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -117,7 +117,8 @@ Analytic
 
 ### efs
 - The VPC of the connecting instance must have DNS hostnames enabled.
-
+- Can be mounted from on-premises systems ONLY if using Direct Connect or a VPN connection.
+- Alternatively, use the EFS File Sync agent.
 
 ### share s3 bucket accross accounts
 - bucket policies and IAM role - programmtic only - accross entire bucket
