--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -104,9 +104,9 @@ use ai to analyse pii
 - The largest object that can be uploaded in a single PUT is 5 gigabytes.
 - An S3 bucket is region specific. !!!!
 
-• Access Control Lists (ACLs) – control permissions access to the bucket.
-• Bucket Policies – control access to the bucket.
-• Cross Origin Resource Sharing (CORS).
+- Access Control Lists (ACLs) – control permissions access to the bucket.
+- Bucket Policies – control access to the bucket.
+- Cross Origin Resource Sharing (CORS).
 
 Analytic 
 - data lake concept: athena, quicksight, redshift spectrum
