--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -155,3 +155,6 @@ Analytic
 - INCORRECT: “Use AWS Global Accelerator” is incorrect. AWS Global Accelerator is used for improving availability and performance for Amazon EC2 instances or Elastic Load Balancers (ALB and NLB). It is not used for improving Amazon S3 performance.
 
 - All EBS types and all instance families support encryption but not all instance types support encryption. There is no direct way to change the encryption state of a volume. Data in transit between an instance and an encrypted volume is also encrypted.
+- The possible values are ok, impaired, warning, or insufficient-data. If all checks pass, the overall status of the volume is ok. If the check fails, the overall status is impaired. If the status is insufficient-data, then the checks may still be taking place on your volume at the time.
+
+- “Store the original images in STANDARD for 30 days, transition to DEEP_ARCHIVE for 90 days, then expire the data” is incorrect. DEEP_ARCHIVE has a minimum storage duration of 180 days
