--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -158,3 +158,12 @@ Analytic
 - The possible values are ok, impaired, warning, or insufficient-data. If all checks pass, the overall status of the volume is ok. If the check fails, the overall status is impaired. If the status is insufficient-data, then the checks may still be taking place on your volume at the time.
 
 - “Store the original images in STANDARD for 30 days, transition to DEEP_ARCHIVE for 90 days, then expire the data” is incorrect. DEEP_ARCHIVE has a minimum storage duration of 180 days
+
+- All EBStypes support encryption and all instance families now support encryption.
+- Not all instancetypes support encryption.
+- Data in transit between an instance and an encrypted volume is also encrypted (data is encrypted in trans.
+- You can have encrypted an unencrypted EBS volumes attached to an instance at the same time.
+- Snapshots of encrypted volumes are encrypted automatically.
+- EBS volumes restored from encrypted snapshots are encrypted automatically.
+- EBS volumes created from encrypted snapshots are also encrypted.
+- all EBS volume types support encryption.
