--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -167,3 +167,6 @@ Analytic
 - EBS volumes restored from encrypted snapshots are encrypted automatically.
 - EBS volumes created from encrypted snapshots are also encrypted.
 - all EBS volume types support encryption.
+
+
+- All instance families support encryption, but not all instance types.
