--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -177,3 +177,5 @@ Analytic
 - Storage Gateway is mainly used in providing low-latency access to data by caching frequently accessed data on-premises while storing archive data securely and durably in Amazon cloud storage services. Storage Gateway optimizes data transfer to AWS by sending only changed data and compressing data.
 
 - Remember that the dominant performance attribute of SSD is IOPS while HDD is Throughput.
+
+- AWS does charge for the storage of any Amazon EBS volumes.
