--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -180,3 +180,7 @@ Analytic
 - Remember that the dominant performance attribute of SSD is IOPS while HDD is Throughput.
 
 - AWS does charge for the storage of any Amazon EBS volumes.
+- Data at rest inside the volume
+- All data moving between the volume and the instance
+- All snapshots created from the volume
+- All volumes created from those snapshots
