--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -65,7 +65,7 @@ edge location: read and write
 - import and export s3
 
 ### gateway ???
-- file gateway: nfs & smb - flat files
+- file gateway: nfs & smb - flat files !!!!!
 - volumn gateway: isci
   - stored volumns: entire dataset and asyc back on S3
   - cached volumns: entire dataset on S3 and frequent accessed data cache on site
