--- a/aws/aws learning doc/s3.md
+++ b/aws/aws learning doc/s3.md
@@ -1,4 +1,5 @@
 ### s3
+- s3 object lock - write once, read many (worm) modal 
 For objects larger than 100 megabytes use the Multipart Upload capability.
 Amazon S3 automatically scales to high request rates.
 For example, your application can achieve at least 3,500 PUT/POST/DELETE and 5,500 GET requests per second per prefix in a bucket.
